--- a/AUTOPLAY.ini
+++ b/AUTOPLAY.ini
@@ -28,3 +28,4 @@ P/S:
 - Can switch feature without turning off the function first.
 - Please use it for chart preview  & find flame out only.
 - Use judge 0 for finding flame out.
+- Coming soon will available for Beat Up, 1-2 Party, Shooting Star.
