--- a/AUTOPLAY.ini
+++ b/AUTOPLAY.ini
@@ -1,6 +1,9 @@
-[AUTOPLAY Tools]
+[AUTOPLAY Tools] - (Ver 2.0.0)
 
 Hotkey:
+[F2] Auto Shooting Star
+[F3] Auto Beat Up
+
 [F4] Auto Guitar V1 (Basic)
 All Auto, Note Turn Off
 Spark example: 1006
@@ -28,4 +31,3 @@ P/S:
 - Can switch feature without turning off the function first.
 - Please use it for chart preview  & find flame out only.
 - Use judge 0 for finding flame out.
-- Coming soon will available for Beat Up, 1-2 Party, Shooting Star.
